// The MIT License
//
// Copyright (c) 2020 Temporal Technologies Inc.  All rights reserved.
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.

syntax = "proto3";

package namespace;

option go_package = "go.temporal.io/temporal-proto/namespace";
option java_package = "io.temporal.proto.namespace";
option java_multiple_files = true;
option ruby_package = "Temporal::Proto";

import "namespace/enum.proto";
import "google/protobuf/wrappers.proto";

message NamespaceInfo {
    string name = 1;
    NamespaceStatus status = 2;
    string description = 3;
    string ownerEmail = 4;
    // A key-value map for any customized purpose.
    map<string, string> data = 5;
    string id = 6;
}

message NamespaceConfiguration {
    int32 workflowExecutionRetentionPeriodInDays = 1;
    google.protobuf.BoolValue emitMetric = 2;
    BadBinaries badBinaries = 3;
    ArchivalStatus historyArchivalStatus = 4;
    string historyArchivalURI = 5;
    ArchivalStatus visibilityArchivalStatus = 6;
    string visibilityArchivalURI = 7;
}

message BadBinaries {
    map<string, BadBinaryInfo> binaries = 1;
}

message BadBinaryInfo {
    string reason = 1;
    string operator = 2;
    int64 createdTimeNano = 3;
}

message UpdateNamespaceInfo {
    string description = 1;
    string ownerEmail = 2;
    // A key-value map for any customized purpose.
    map<string, string> data = 3;
}
